Fix sales debts orders catalog and vinylfuture zip